[package]
name = "relay-scanner"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"
clap = { version = "4.0", features = ["derive"] }
futures = "0.3"
anyhow = "1.0"
urlencoding = "2.1.0"
